feat(language): add Chinese language support, tool and translations refactor(userSettings): removed most settings, I will use defaults.ts now

--- a/Jsons/language/de.json
+++ b/Jsons/language/de.json
@@ -13,6 +13,7 @@
   "lg_sv": "Schwedisch",
   "lg_ja": "japanisch",
   "lg_hi": "Hindi",
+  "lg_cn": "chinesisch",
   "unit_billion": "Md",
   "unit_million": "M",
   "unit_thousand": "k",
