--- a/Jsons/language/en.json
+++ b/Jsons/language/en.json
@@ -13,6 +13,7 @@
   "lg_sv": "Swedish",
   "lg_ja": "Japanese",
   "lg_hi": "Hindi",
+  "lg_cn": "Chinese",
   "unit_billion": "B",
   "unit_million": "M",
   "unit_thousand": "K",
