--- a/Jsons/language/es.json
+++ b/Jsons/language/es.json
@@ -13,6 +13,7 @@
   "lg_sv": "sueco",
   "lg_ja": "japonés",
   "lg_hi": "hindi",
+  "lg_cn": "Chino",
   "unit_billion": "MM",
   "unit_million": "M",
   "unit_thousand": "k",
