--- a/Jsons/language/it.json
+++ b/Jsons/language/it.json
@@ -13,6 +13,7 @@
   "lg_sv": "svedese",
   "lg_ja": "giapponese",
   "lg_hi": "hindi",
+  "lg_cn": "cinese",
   "unit_billion": "Md",
   "unit_million": "Mn",
   "unit_thousand": "k",
@@ -30,7 +31,7 @@
   "timeview3_show": "Mostra/Nascondi la visualizzazione temporale alternativa",
   "timeview1_set": "Modifica la visualizzazione temporale principale",
   "timeview2_set": "Modifica la visualizzazione temporale alternativa",
-  "timeview_save": "Salva la visualizzazione del tempo",
+  "timeview_save": "Salva la visualizzazione temporale",
   "catalogs_show": "Cataloghi",
   "database_show": "Mostra database",
   "load": "Pannelli e scatole di carico",
