--- a/Jsons/language/ja.json
+++ b/Jsons/language/ja.json
@@ -13,6 +13,7 @@
   "lg_sv": "スウェーデン語",
   "lg_ja": "日本語",
   "lg_hi": "ヒンディー語",
+  "lg_cn": "中国語",
   "unit_billion": "B",
   "unit_million": "M",
   "unit_thousand": "K",
@@ -25,7 +26,7 @@
   "toggle_vh": "垂直/水平を切り替える",
   "timeview_edition": "タイムビュー",
   "search_show": "検索",
-  "timeview1_show": "メインタイムビューの表示/非表示",
+  "timeview1_show": "メインタイムビューを表示/非表示",
   "timeview2_show": "代替タイムビューの表示/非表示",
   "timeview3_show": "代替タイムビューの表示/非表示",
   "timeview1_set": "メインタイムビューを編集",
@@ -94,7 +95,7 @@
   "cal_hebrew": "ヘブライ語",
   "cal_balinese": "バリ人",
   "cal_creationist": "創造論者",
-  "cal_gregorian_explanation": "1582 年に教皇グレゴリウス 13 世によって導入された、12 か月、365 ～ 366 日の太陽暦。",
+  "cal_gregorian_explanation": "太陽暦、12 か月、365 ～ 366 日、1582 年に教皇グレゴリウス 13 世によって導入されました。",
   "cal_islamic_explanation": "太陰暦（12 か月、354 ～ 355 日）は、ムハンマドのメディナへの移住（西暦 622 年）から始まります。",
   "cal_chinese_explanation": "太陰太陽暦は、太陰月、太陽年、そして12年周期の干支を組み合わせた暦です。東アジアの伝統的な祭りに用いられます。",
   "cal_persian_explanation": "太陽暦は 365 ～ 366 日で、春分 (ノウルーズ) から始まります。",
@@ -103,7 +104,7 @@
   "cal_ethiopian_explanation": "太陽暦、13 か月 (30 日が 12 か月、5 ～ 6 日が 1 か月)、グレゴリオ暦より 7 ～ 8 年遅れています。",
   "cal_creationist_explanation": "年代順の枠組みで、聖書の系図から地球の年齢を計算し、創造を 6,000 ～ 10,000 年前に位置付けます。",
   "cal_gregorian_usage": "使用率: 95% (公式) - ほぼすべての国で公式および経済目的で民間暦として使用されています。",
-  "cal_islamic_usage": "使用率: 24% (宗教的) - 約 20 億人のイスラム教徒 (世界の約 24%) が主に宗教上の祝日 (ラマダン、ハッジなど) に遵守します。",
+  "cal_islamic_usage": "使用率: 24% (宗教的) - 約 20 億人のイスラム教徒 (世界の約 24%) が主に宗教上の祝日 (ラマダン、ハッジなど) に実施します。",
   "cal_chinese_usage": "使用率: 18% (文化的) - 旧正月などの祭りで約 14 億人の中国人がこれを祝います。",
   "cal_persian_usage": "使用率: 1.5% (民間/文化) - イラン (~8,900 万) とアフガニスタン (~4,100 万) の公式カレンダー。",
   "cal_balinese_usage": "使用率: 1.5% (民間) - エチオピア(~126M)で公用語、エリトリアで使用。",
