--- a/Jsons/language/nl.json
+++ b/Jsons/language/nl.json
@@ -13,6 +13,7 @@
   "lg_sv": "Zweeds",
   "lg_ja": "Japanse",
   "lg_hi": "Hindi",
+  "lg_cn": "Chinese",
   "unit_billion": "Md",
   "unit_million": "Mn",
   "unit_thousand": "D",
