--- a/Jsons/language/pl.json
+++ b/Jsons/language/pl.json
@@ -13,6 +13,7 @@
   "lg_sv": "szwedzki",
   "lg_ja": "japoński",
   "lg_hi": "hinduski",
+  "lg_cn": "chiński",
   "unit_billion": "B",
   "unit_million": "M",
   "unit_thousand": "K",
