--- a/Jsons/language/ru.json
+++ b/Jsons/language/ru.json
@@ -13,6 +13,7 @@
   "lg_sv": "Шведский",
   "lg_ja": "Японский",
   "lg_hi": "Хинди",
+  "lg_cn": "Хинди",
   "unit_billion": "млрд",
   "unit_million": "млн",
   "unit_thousand": "тыс.",
@@ -72,7 +73,7 @@
   "source_britannica": "Британника",
   "source_citizendium": "Гражданиндиум",
   "source_encyclopedia.com": "Энциклопедия",
-  "source_imdb": "Имдаб",
+  "source_imdb": "Имдб",
   "source_internetarchive": "Интернет-архив",
   "source_projectgutemberg": "Проект Гутемберг",
   "source_qiuwenbaike": "Цювэнь Байке",
