--- a/Jsons/language/sv.json
+++ b/Jsons/language/sv.json
@@ -13,6 +13,7 @@
   "lg_sv": "Svenska",
   "lg_ja": "japanska",
   "lg_hi": "Hindi",
+  "lg_cn": "kinesiska",
   "unit_billion": "B",
   "unit_million": "M",
   "unit_thousand": "K",
@@ -70,7 +71,7 @@
   "cred_project": "Mindfulness: Pierre",
   "source_baidubaike": "Baidu Baike",
   "source_britannica": "Britannica",
-  "source_citizendium": "Citizendium",
+  "source_citizendium": "Citizenium",
   "source_encyclopedia.com": "Encyklopedi",
   "source_imdb": "Imdb",
   "source_internetarchive": "Internetarkivet",
@@ -96,7 +97,7 @@
   "cal_creationist": "Kreationist",
   "cal_gregorian_explanation": "Solkalender, 12 månader, 365-366 dagar, introducerad av påven Gregorius XIII år 1582.",
   "cal_islamic_explanation": "Månkalendern, 12 månader, 354-355 dagar, börjar med Muhammeds migration till Medina (622 e.Kr.).",
-  "cal_chinese_explanation": "Lunisolarkalender, kombinerar månmånader, solår och 12-åriga zodiakcykel för djur. Används för traditionella östasiatiska festivaler.",
+  "cal_chinese_explanation": "Lunisolarkalender, kombinerar månmånader, solår och 12-åriga zodiakcykeln för djuren. Används för traditionella östasiatiska festivaler.",
   "cal_persian_explanation": "Solkalendern, 365-366 dagar, börjar vid vårdagjämningen (Nowruz).",
   "cal_balinese_explanation": "Kalendersystem som kombinerar samtidiga cykler, inklusive en 210-dagars Pawukon-kalender. Används för religiösa ceremonier.",
   "cal_hebrew_explanation": "Lunisolarkalendern, 12–13 månader, börjar vid skapelsen (3761 f.Kr.). Används för religiösa högtider.",
