--- a/Jsons/language/fr.json
+++ b/Jsons/language/fr.json
@@ -13,6 +13,7 @@
   "lg_sv": "Suédois",
   "lg_ja": "Japonais",
   "lg_hi": "Hindi",
+  "lg_cn": "Chinois",
   "unit_billion": "Md",
   "unit_million": "M",
   "unit_thousand": "k",
@@ -93,13 +94,13 @@
   "cal_ethiopian": "éthiopien",
   "cal_hebrew": "hébreu",
   "cal_balinese": "Balinais",
-  "cal_creationist": "Créationniste",
+  "cal_creationist": "créationniste",
   "cal_gregorian_explanation": "Calendrier solaire, 12 mois, 365-366 jours, introduit par le pape Grégoire XIII en 1582.",
   "cal_islamic_explanation": "Calendrier lunaire, 12 mois, 354-355 jours, commence avec la migration de Mahomet à Médine (622 CE).",
   "cal_chinese_explanation": "Calendrier luni-solaire, combinant les mois lunaires, l'année solaire et le cycle zodiacal de 12 ans. Utilisé pour les fêtes traditionnelles d'Asie de l'Est.",
   "cal_persian_explanation": "Le calendrier solaire, de 365 à 366 jours, commence à l'équinoxe de printemps (Nowruz).",
   "cal_balinese_explanation": "Système calendaire combinant des cycles simultanés, incluant un calendrier Pawukon de 210 jours. Utilisé pour les cérémonies religieuses.",
-  "cal_hebrew_explanation": "Calendrier luni-solaire, de 12 à 13 mois, débutant avec la création (3761 av. J.-C.). Utilisé pour les pratiques religieuses.",
+  "cal_hebrew_explanation": "Calendrier luni-solaire, de 12 à 13 mois, débutant avec la création (3761 av. J.-C.). Utilisé pour les observances religieuses.",
   "cal_ethiopian_explanation": "Calendrier solaire, 13 mois (12 de 30 jours et 1 de 5-6 jours), 7-8 ans en retard sur le calendrier grégorien.",
   "cal_creationist_explanation": "Ce cadre chronologique calcule l'âge de la Terre à partir des généalogies bibliques, situant la création il y a 6 000 à 10 000 ans.",
   "cal_gregorian_usage": "Utilisation : 95 % (officiel) - Utilisé comme calendrier civil dans presque tous les pays à des fins officielles et économiques.",
