--- a/Jsons/language/de.json
+++ b/Jsons/language/de.json
@@ -13,10 +13,34 @@
   "lg_sv": "Schwedisch",
   "lg_ja": "japanisch",
   "lg_hi": "Hindi",
-  "lg_cn": "chinesisch",
+  "lg_zh": "chinesisch",
   "unit_billion": "Md",
   "unit_million": "M",
   "unit_thousand": "k",
+  "month_long01": "Januar",
+  "month_long02": "Februar",
+  "month_long03": "Marsch",
+  "month_long04": "April",
+  "month_long05": "Mai",
+  "month_long06": "Juni",
+  "month_long07": "Juli",
+  "month_long08": "August",
+  "month_long09": "September",
+  "month_long10": "Oktober",
+  "month_long11": "November",
+  "month_long12": "Dezember",
+  "month_short01": "Januar",
+  "month_short02": "Februar",
+  "month_short03": "Beschädigen",
+  "month_short04": "April",
+  "month_short05": "Mai",
+  "month_short06": "Juni",
+  "month_short07": "Jul",
+  "month_short08": "August",
+  "month_short09": "September",
+  "month_short10": "Oktober",
+  "month_short11": "November",
+  "month_short12": "Dezember",
   "trello": "Trello",
   "source": "Quelle",
   "version": "Version",
@@ -34,7 +58,7 @@
   "timeview_save": "Zeitansicht speichern",
   "catalogs_show": "Kataloge",
   "database_show": "Datenbank anzeigen",
-  "load": "Lastpaneele und -kästen",
+  "load": "Lastverteiler und -kästen",
   "cosmos_show": "Hintergrund umschalten",
   "cat_science": "Wissenschaft",
   "cat_power": "Leistung",
