--- a/Jsons/language/en.json
+++ b/Jsons/language/en.json
@@ -13,10 +13,34 @@
   "lg_sv": "Swedish",
   "lg_ja": "Japanese",
   "lg_hi": "Hindi",
-  "lg_cn": "Chinese",
+  "lg_zh": "Chinese",
   "unit_billion": "B",
   "unit_million": "M",
   "unit_thousand": "K",
+  "month_long01": "January",
+  "month_long02": "February",
+  "month_long03": "March",
+  "month_long04": "April",
+  "month_long05": "May",
+  "month_long06": "June",
+  "month_long07": "July",
+  "month_long08": "August",
+  "month_long09": "September",
+  "month_long10": "October",
+  "month_long11": "November",
+  "month_long12": "December",
+  "month_short01": "Jan",
+  "month_short02": "Feb",
+  "month_short03": "Mar",
+  "month_short04": "Apr",
+  "month_short05": "May",
+  "month_short06": "Jun",
+  "month_short07": "Jul",
+  "month_short08": "Aug",
+  "month_short09": "Sep",
+  "month_short10": "Oct",
+  "month_short11": "Nov",
+  "month_short12": "Dec",
   "trello": "Trello",
   "source": "source",
   "version": "version",
