--- a/Jsons/language/es.json
+++ b/Jsons/language/es.json
@@ -13,10 +13,34 @@
   "lg_sv": "sueco",
   "lg_ja": "japonés",
   "lg_hi": "hindi",
-  "lg_cn": "Chino",
+  "lg_zh": "Chino",
   "unit_billion": "MM",
   "unit_million": "M",
   "unit_thousand": "k",
+  "month_long01": "Enero",
+  "month_long02": "Febrero",
+  "month_long03": "Marzo",
+  "month_long04": "Abril",
+  "month_long05": "Puede",
+  "month_long06": "Junio",
+  "month_long07": "Julio",
+  "month_long08": "Agosto",
+  "month_long09": "Septiembre",
+  "month_long10": "Octubre",
+  "month_long11": "Noviembre",
+  "month_long12": "Diciembre",
+  "month_short01": "Ene",
+  "month_short02": "Feb",
+  "month_short03": "Mar",
+  "month_short04": "Abr",
+  "month_short05": "Puede",
+  "month_short06": "Jun",
+  "month_short07": "Jul",
+  "month_short08": "Ago",
+  "month_short09": "Sep",
+  "month_short10": "Oct",
+  "month_short11": "Nov",
+  "month_short12": "Dic",
   "trello": "Trello",
   "source": "fuente",
   "version": "versión",
