--- a/Jsons/language/fr.json
+++ b/Jsons/language/fr.json
@@ -13,10 +13,34 @@
   "lg_sv": "Suédois",
   "lg_ja": "Japonais",
   "lg_hi": "Hindi",
-  "lg_cn": "Chinois",
+  "lg_zh": "Chinois",
   "unit_billion": "Md",
   "unit_million": "M",
   "unit_thousand": "k",
+  "month_long01": "Janvier",
+  "month_long02": "Février",
+  "month_long03": "Mars",
+  "month_long04": "Avril",
+  "month_long05": "Peut",
+  "month_long06": "Juin",
+  "month_long07": "Juillet",
+  "month_long08": "Août",
+  "month_long09": "Septembre",
+  "month_long10": "Octobre",
+  "month_long11": "Novembre",
+  "month_long12": "Décembre",
+  "month_short01": "Jan",
+  "month_short02": "Fév",
+  "month_short03": "Mar",
+  "month_short04": "Avr",
+  "month_short05": "Mai",
+  "month_short06": "Jun",
+  "month_short07": "Jul",
+  "month_short08": "Août",
+  "month_short09": "Sep",
+  "month_short10": "Oct",
+  "month_short11": "Nov",
+  "month_short12": "Déc",
   "trello": "Trello",
   "source": "source",
   "version": "version",
