--- a/Jsons/language/hi.json
+++ b/Jsons/language/hi.json
@@ -13,10 +13,34 @@
   "lg_sv": "स्वीडिश",
   "lg_ja": "जापानी",
   "lg_hi": "हिंदी",
-  "lg_cn": "चीनी",
-  "unit_billion": "बी",
-  "unit_million": "एम",
-  "unit_thousand": "के",
+  "lg_zh": "चीनी",
+  "unit_billion": "अ",
+  "unit_million": "द",
+  "unit_thousand": "ह",
+  "month_long01": "जनवरी",
+  "month_long02": "फ़रवरी",
+  "month_long03": "मार्च",
+  "month_long04": "अप्रैल",
+  "month_long05": "मई",
+  "month_long06": "जून",
+  "month_long07": "जुलाई",
+  "month_long08": "अगस्त",
+  "month_long09": "सितम्बर",
+  "month_long10": "अक्टूबर",
+  "month_long11": "नवंबर",
+  "month_long12": "दिसंबर",
+  "month_short01": "हज़ार",
+  "month_short02": "जनवरी",
+  "month_short03": "फ़रवरी",
+  "month_short04": "मार्च",
+  "month_short05": "अप्रैल",
+  "month_short06": "मई",
+  "month_short07": "जून",
+  "month_short08": "जुलाई",
+  "month_short09": "अगस्त",
+  "month_short10": "सितम्बर",
+  "month_short11": "अक्टूबर",
+  "month_short12": "नवंबर",
   "trello": "Trello",
   "source": "स्रोत",
   "version": "संस्करण",
