--- a/Jsons/language/it.json
+++ b/Jsons/language/it.json
@@ -13,10 +13,34 @@
   "lg_sv": "svedese",
   "lg_ja": "giapponese",
   "lg_hi": "hindi",
-  "lg_cn": "cinese",
+  "lg_zh": "cinese",
   "unit_billion": "Md",
   "unit_million": "Mn",
   "unit_thousand": "k",
+  "month_long01": "Gennaio",
+  "month_long02": "Febbraio",
+  "month_long03": "Marzo",
+  "month_long04": "aprile",
+  "month_long05": "Maggio",
+  "month_long06": "Giugno",
+  "month_long07": "Luglio",
+  "month_long08": "agosto",
+  "month_long09": "settembre",
+  "month_long10": "ottobre",
+  "month_long11": "novembre",
+  "month_long12": "Dicembre",
+  "month_short01": "gennaio",
+  "month_short02": "Febbraio",
+  "month_short03": "Marzo",
+  "month_short04": "aprile",
+  "month_short05": "Maggio",
+  "month_short06": "giugno",
+  "month_short07": "luglio",
+  "month_short08": "agosto",
+  "month_short09": "Settembre",
+  "month_short10": "ottobre",
+  "month_short11": "novembre",
+  "month_short12": "Dicembre",
   "trello": "Trello",
   "source": "fonte",
   "version": "versione",
