--- a/Jsons/language/ja.json
+++ b/Jsons/language/ja.json
@@ -13,10 +13,34 @@
   "lg_sv": "スウェーデン語",
   "lg_ja": "日本語",
   "lg_hi": "ヒンディー語",
-  "lg_cn": "中国語",
-  "unit_billion": "B",
-  "unit_million": "M",
-  "unit_thousand": "K",
+  "lg_zh": "中国語",
+  "unit_billion": "十",
+  "unit_million": "百",
+  "unit_thousand": "千",
+  "month_long01": "1月",
+  "month_long02": "2月",
+  "month_long03": "行進",
+  "month_long04": "4月",
+  "month_long05": "5月",
+  "month_long06": "6月",
+  "month_long07": "7月",
+  "month_long08": "8月",
+  "month_long09": "9月",
+  "month_long10": "10月",
+  "month_long11": "11月",
+  "month_long12": "12月",
+  "month_short01": "千",
+  "month_short02": "1月",
+  "month_short03": "2月",
+  "month_short04": "行進",
+  "month_short05": "4月",
+  "month_short06": "5月",
+  "month_short07": "6月",
+  "month_short08": "7月",
+  "month_short09": "8月",
+  "month_short10": "9月",
+  "month_short11": "10月",
+  "month_short12": "11月",
   "trello": "トレロ",
   "source": "ソース",
   "version": "バージョン",
@@ -95,7 +119,7 @@
   "cal_hebrew": "ヘブライ語",
   "cal_balinese": "バリ人",
   "cal_creationist": "創造論者",
-  "cal_gregorian_explanation": "太陽暦、12 か月、365 ～ 366 日、1582 年に教皇グレゴリウス 13 世によって導入されました。",
+  "cal_gregorian_explanation": "1582 年に教皇グレゴリウス 13 世によって導入された、12 か月、365 ～ 366 日の太陽暦。",
   "cal_islamic_explanation": "太陰暦（12 か月、354 ～ 355 日）は、ムハンマドのメディナへの移住（西暦 622 年）から始まります。",
   "cal_chinese_explanation": "太陰太陽暦は、太陰月、太陽年、そして12年周期の干支を組み合わせた暦です。東アジアの伝統的な祭りに用いられます。",
   "cal_persian_explanation": "太陽暦は 365 ～ 366 日で、春分 (ノウルーズ) から始まります。",
