--- a/Jsons/language/nl.json
+++ b/Jsons/language/nl.json
@@ -13,10 +13,34 @@
   "lg_sv": "Zweeds",
   "lg_ja": "Japanse",
   "lg_hi": "Hindi",
-  "lg_cn": "Chinese",
+  "lg_zh": "Chinese",
   "unit_billion": "Md",
   "unit_million": "Mn",
   "unit_thousand": "D",
+  "month_long01": "Januari",
+  "month_long02": "Februari",
+  "month_long03": "Maart",
+  "month_long04": "april",
+  "month_long05": "Kunnen",
+  "month_long06": "juni",
+  "month_long07": "juli",
+  "month_long08": "augustus",
+  "month_long09": "september",
+  "month_long10": "oktober",
+  "month_long11": "november",
+  "month_long12": "December",
+  "month_short01": "Jan",
+  "month_short02": "februari",
+  "month_short03": "Mar",
+  "month_short04": "april",
+  "month_short05": "Kunnen",
+  "month_short06": "juni",
+  "month_short07": "juli",
+  "month_short08": "Aug",
+  "month_short09": "Sep",
+  "month_short10": "oktober",
+  "month_short11": "nov",
+  "month_short12": "Dec",
   "trello": "Trello",
   "source": "bron",
   "version": "versie",
