--- a/Jsons/language/pl.json
+++ b/Jsons/language/pl.json
@@ -13,10 +13,34 @@
   "lg_sv": "szwedzki",
   "lg_ja": "japoński",
   "lg_hi": "hinduski",
-  "lg_cn": "chiński",
-  "unit_billion": "B",
-  "unit_million": "M",
-  "unit_thousand": "K",
+  "lg_zh": "chiński",
+  "unit_billion": "M",
+  "unit_million": "m",
+  "unit_thousand": "t",
+  "month_long01": "Styczeń",
+  "month_long02": "Luty",
+  "month_long03": "marzec",
+  "month_long04": "Kwiecień",
+  "month_long05": "Móc",
+  "month_long06": "Czerwiec",
+  "month_long07": "Lipiec",
+  "month_long08": "Sierpień",
+  "month_long09": "Wrzesień",
+  "month_long10": "Październik",
+  "month_long11": "Listopad",
+  "month_long12": "Grudzień",
+  "month_short01": "Jan",
+  "month_short02": "Luty",
+  "month_short03": "Zniszczyć",
+  "month_short04": "kwiecień",
+  "month_short05": "Móc",
+  "month_short06": "Czerwiec",
+  "month_short07": "Lipiec",
+  "month_short08": "Sierpień",
+  "month_short09": "Wrzesień",
+  "month_short10": "Październik",
+  "month_short11": "Listopad",
+  "month_short12": "Grudzień",
   "trello": "Trello",
   "source": "źródło",
   "version": "wersja",
