--- a/Jsons/language/ru.json
+++ b/Jsons/language/ru.json
@@ -13,10 +13,34 @@
   "lg_sv": "Шведский",
   "lg_ja": "Японский",
   "lg_hi": "Хинди",
-  "lg_cn": "Хинди",
-  "unit_billion": "млрд",
-  "unit_million": "млн",
-  "unit_thousand": "тыс.",
+  "lg_zh": "Хинди",
+  "unit_billion": "д",
+  "unit_million": "н",
+  "unit_thousand": "т",
+  "month_long01": "Январь",
+  "month_long02": "Февраль",
+  "month_long03": "Маршировать",
+  "month_long04": "Апрель",
+  "month_long05": "Может",
+  "month_long06": "Июнь",
+  "month_long07": "Июль",
+  "month_long08": "Август",
+  "month_long09": "Сентябрь",
+  "month_long10": "Октябрь",
+  "month_long11": "Ноябрь",
+  "month_long12": "Декабрь",
+  "month_short01": "Янв",
+  "month_short02": "февраль",
+  "month_short03": "март",
+  "month_short04": "Апр",
+  "month_short05": "Может",
+  "month_short06": "Джун",
+  "month_short07": "июль",
+  "month_short08": "Август",
+  "month_short09": "Сентябрь",
+  "month_short10": "Октябрь",
+  "month_short11": "Ноябрь",
+  "month_short12": "Декабрь",
   "trello": "Trello",
   "source": "источник",
   "version": "версия",
@@ -102,7 +126,7 @@
   "cal_balinese_explanation": "Календарная система, объединяющая одновременные циклы, включая 210-дневный календарь Павукон. Используется для религиозных церемоний.",
   "cal_hebrew_explanation": "Лунно-солнечный календарь, 12-13 месяцев, начинается с момента сотворения мира (3761 г. до н.э.). Используется для религиозных обрядов.",
   "cal_ethiopian_explanation": "Солнечный календарь, 13 месяцев (12 из 30 дней и 1 из 5-6 дней), отстает от григорианского календаря на 7-8 лет.",
-  "cal_creationist_explanation": "Хронологическая модель вычисляет возраст Земли на основе библейских родословных, определяя период сотворения мира как 6000-10000 лет назад.",
+  "cal_creationist_explanation": "Хронологическая модель вычисляет возраст Земли на основе библейских родословных, определяя время сотворения мира как 6000-10000 лет назад.",
   "cal_gregorian_usage": "Использование: 95% (официально) - Используется в качестве гражданского календаря почти во всех странах для официальных и экономических целей.",
   "cal_islamic_usage": "Использование: 24% (религиозные) - Соблюдается примерно 2 миллиардами мусульман (примерно 24% населения мира), в основном во время религиозных праздников (Рамадан, Хадж и т. д.).",
   "cal_chinese_usage": "Распространенность: 18% (культурная) - Используется примерно 1,4 миллиарда китайцев во время таких праздников, как Китайский Новый год.",
