--- a/Jsons/language/sv.json
+++ b/Jsons/language/sv.json
@@ -13,10 +13,34 @@
   "lg_sv": "Svenska",
   "lg_ja": "japanska",
   "lg_hi": "Hindi",
-  "lg_cn": "kinesiska",
+  "lg_zh": "kinesiska",
   "unit_billion": "B",
   "unit_million": "M",
   "unit_thousand": "K",
+  "month_long01": "januari",
+  "month_long02": "februari",
+  "month_long03": "Mars",
+  "month_long04": "april",
+  "month_long05": "Maj",
+  "month_long06": "Juni",
+  "month_long07": "Juli",
+  "month_long08": "Augusti",
+  "month_long09": "september",
+  "month_long10": "oktober",
+  "month_long11": "november",
+  "month_long12": "December",
+  "month_short01": "Jan",
+  "month_short02": "februari",
+  "month_short03": "Mars",
+  "month_short04": "april",
+  "month_short05": "Maj",
+  "month_short06": "juni",
+  "month_short07": "Juli",
+  "month_short08": "Aug",
+  "month_short09": "Sep",
+  "month_short10": "okt",
+  "month_short11": "nov",
+  "month_short12": "dec",
   "trello": "Trello",
   "source": "källa",
   "version": "version",
@@ -71,7 +95,7 @@
   "cred_project": "Mindfulness: Pierre",
   "source_baidubaike": "Baidu Baike",
   "source_britannica": "Britannica",
-  "source_citizendium": "Citizenium",
+  "source_citizendium": "Citizendium",
   "source_encyclopedia.com": "Encyklopedi",
   "source_imdb": "Imdb",
   "source_internetarchive": "Internetarkivet",
