--- a/Jsons/language/uk.json
+++ b/Jsons/language/uk.json
@@ -13,10 +13,34 @@
   "lg_sv": "Шведська",
   "lg_ja": "Японська",
   "lg_hi": "Гінді",
-  "lg_cn": "Гінді",
-  "unit_billion": "млрд",
-  "unit_million": "млн",
-  "unit_thousand": "тис.",
+  "lg_zh": "Гінді",
+  "unit_billion": "д",
+  "unit_million": "н",
+  "unit_thousand": "т",
+  "month_long01": "Січень",
+  "month_long02": "Лютий",
+  "month_long03": "Березень",
+  "month_long04": "Квітень",
+  "month_long05": "Травень",
+  "month_long06": "Червень",
+  "month_long07": "Липень",
+  "month_long08": "Серпень",
+  "month_long09": "Вересень",
+  "month_long10": "Жовтень",
+  "month_long11": "Листопад",
+  "month_long12": "Грудень",
+  "month_short01": "Січ",
+  "month_short02": "Лютий",
+  "month_short03": "Бер",
+  "month_short04": "Квітень",
+  "month_short05": "Травень",
+  "month_short06": "Червень",
+  "month_short07": "Липень",
+  "month_short08": "Серпень",
+  "month_short09": "Вересень",
+  "month_short10": "Жовтень",
+  "month_short11": "Листопад",
+  "month_short12": "Грудень",
   "trello": "Trello",
   "source": "джерело",
   "version": "версія",
@@ -104,7 +128,7 @@
   "cal_ethiopian_explanation": "Сонячний календар, 13 місяців (12 з 30 днів та 1 з 5-6 днів), на 7-8 років відстає від григоріанського календаря.",
   "cal_creationist_explanation": "Хронологічна основа, розраховує вік Землі на основі біблійних генеалогій, розміщуючи створення світу 6000-10 000 років тому.",
   "cal_gregorian_usage": "Використання: 95% (офіційне) – Використовується як цивільний календар майже в кожній країні для офіційних та економічних цілей.",
-  "cal_islamic_usage": "Використання: 24% (релігійне) – святкується приблизно 2 мільярдами мусульман (~24% світу), переважно на релігійні свята (Рамадан, Хадж тощо).",
+  "cal_islamic_usage": "Використання: 24% (релігійне) – святкується ~2 мільярдами мусульман (~24% світу), переважно на релігійні свята (Рамадан, Хадж тощо).",
   "cal_chinese_usage": "Використання: 18% (культурне) – святкують ~1,4 мільярда китайців під час таких свят, як Місячний Новий рік.",
   "cal_persian_usage": "Використання: 1,5% (цивільне/культурне) - Офіційний календар в Ірані (~89 млн) та Афганістані (~41 млн).",
   "cal_balinese_usage": "Використання: 1,5% (цивільне) - офіційне в Ефіопії (~126 млн) та використовується в Еритреї.",
