--- a/Jsons/language/zh.json
+++ b/Jsons/language/zh.json
@@ -14,9 +14,33 @@
   "lg_ja": "日本人",
   "lg_hi": "印地语",
   "lg_zh": "中国人",
-  "unit_billion": "B",
-  "unit_million": "M",
-  "unit_thousand": "K",
+  "unit_billion": "十",
+  "unit_million": "百",
+  "unit_thousand": "千",
+  "month_long01": "一月",
+  "month_long02": "二月",
+  "month_long03": "行进",
+  "month_long04": "四月",
+  "month_long05": "可能",
+  "month_long06": "六月",
+  "month_long07": "七月",
+  "month_long08": "八月",
+  "month_long09": "九月",
+  "month_long10": "十月",
+  "month_long11": "十一月",
+  "month_long12": "十二月",
+  "month_short01": "千",
+  "month_short02": "一月",
+  "month_short03": "二月",
+  "month_short04": "行进",
+  "month_short05": "四月",
+  "month_short06": "可能",
+  "month_short07": "六月",
+  "month_short08": "七月",
+  "month_short09": "八月",
+  "month_short10": "九月",
+  "month_short11": "十月",
+  "month_short12": "十一月",
   "trello": "Trello",
   "source": "来源",
   "version": "版本",
