--- a/Jsons/language/de.json
+++ b/Jsons/language/de.json
@@ -58,7 +58,7 @@
   "timeview_save": "Zeitansicht speichern",
   "catalogs_show": "Kataloge",
   "database_show": "Datenbank anzeigen",
-  "load": "Lastverteiler und -kästen",
+  "load": "Lastpaneele und -kästen",
   "cosmos_show": "Hintergrund umschalten",
   "cat_science": "Wissenschaft",
   "cat_power": "Leistung",
@@ -300,5 +300,37 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": ""
+  "tv_2020s_wikipedia": "",
+  "tv_hadean": "Hadaikum",
+  "tv_archean": "Archaikum",
+  "tv_proterozoic": "Proterozoikum",
+  "tv_phanerozoic": "Phanerozoikum",
+  "tv_paleozoic": "Paläozoikum",
+  "tv_mesozoic": "Mesozoikum",
+  "tv_cenozoic": "Känozoikum",
+  "tv_hadean_wikipedia": "",
+  "tv_archean_wikipedia": "",
+  "tv_proterozoic_wikipedia": "",
+  "tv_phanerozoic_wikipedia": "",
+  "tv_paleozoic_wikipedia": "",
+  "tv_mesozoic_wikipedia": "",
+  "tv_cenozoic_wikipedia": "",
+  "tv_stone": "Stein",
+  "tv_bronze": "Bronze",
+  "tv_iron": "Eisen",
+  "tv_antiquity": "Antike",
+  "tv_middle ages": "Mittelalter",
+  "tv_renaissance": "Renaissance",
+  "tv_enlightenment": "Aufklärung",
+  "tv_industrial": "Industrie",
+  "tv_contemporary": "Zeitgenössisch",
+  "tv_stone_wikipedia": "",
+  "tv_bronze_wikipedia": "",
+  "tv_iron_wikipedia": "",
+  "tv_antiquity_wikipedia": "",
+  "tv_middle ages_wikipedia": "",
+  "tv_renaissance_wikipedia": "",
+  "tv_enlightenment_wikipedia": "",
+  "tv_industrial_wikipedia": "",
+  "tv_contemporary_wikipedia": ""
 }
