--- a/Jsons/language/fr.json
+++ b/Jsons/language/fr.json
@@ -21,7 +21,7 @@
   "month_long02": "Février",
   "month_long03": "Mars",
   "month_long04": "Avril",
-  "month_long05": "Peut",
+  "month_long05": "Mai",
   "month_long06": "Juin",
   "month_long07": "Juillet",
   "month_long08": "Août",
@@ -118,13 +118,13 @@
   "cal_ethiopian": "éthiopien",
   "cal_hebrew": "hébreu",
   "cal_balinese": "Balinais",
-  "cal_creationist": "créationniste",
+  "cal_creationist": "Créationniste",
   "cal_gregorian_explanation": "Calendrier solaire, 12 mois, 365-366 jours, introduit par le pape Grégoire XIII en 1582.",
   "cal_islamic_explanation": "Calendrier lunaire, 12 mois, 354-355 jours, commence avec la migration de Mahomet à Médine (622 CE).",
   "cal_chinese_explanation": "Calendrier luni-solaire, combinant les mois lunaires, l'année solaire et le cycle zodiacal de 12 ans. Utilisé pour les fêtes traditionnelles d'Asie de l'Est.",
   "cal_persian_explanation": "Le calendrier solaire, de 365 à 366 jours, commence à l'équinoxe de printemps (Nowruz).",
   "cal_balinese_explanation": "Système calendaire combinant des cycles simultanés, incluant un calendrier Pawukon de 210 jours. Utilisé pour les cérémonies religieuses.",
-  "cal_hebrew_explanation": "Calendrier luni-solaire, de 12 à 13 mois, débutant avec la création (3761 av. J.-C.). Utilisé pour les observances religieuses.",
+  "cal_hebrew_explanation": "Calendrier luni-solaire, de 12 à 13 mois, débutant avec la création (3761 av. J.-C.). Utilisé pour les pratiques religieuses.",
   "cal_ethiopian_explanation": "Calendrier solaire, 13 mois (12 de 30 jours et 1 de 5-6 jours), 7-8 ans en retard sur le calendrier grégorien.",
   "cal_creationist_explanation": "Ce cadre chronologique calcule l'âge de la Terre à partir des généalogies bibliques, situant la création il y a 6 000 à 10 000 ans.",
   "cal_gregorian_usage": "Utilisation : 95 % (officiel) - Utilisé comme calendrier civil dans presque tous les pays à des fins officielles et économiques.",
@@ -300,5 +300,37 @@
   "tv_1990s_wikipedia": "Années_1990",
   "tv_2000s_wikipedia": "Années_2000",
   "tv_2010s_wikipedia": "Années_2010",
-  "tv_2020s_wikipedia": "Années_2020"
+  "tv_2020s_wikipedia": "Années_2020",
+  "tv_hadean": "Hadéen",
+  "tv_archean": "Archéen",
+  "tv_proterozoic": "Protérozoïque",
+  "tv_phanerozoic": "Phanérozoïque",
+  "tv_paleozoic": "Paléozoïque",
+  "tv_mesozoic": "Mésozoïque",
+  "tv_cenozoic": "Cénozoïque",
+  "tv_hadean_wikipedia": "",
+  "tv_archean_wikipedia": "",
+  "tv_proterozoic_wikipedia": "",
+  "tv_phanerozoic_wikipedia": "",
+  "tv_paleozoic_wikipedia": "",
+  "tv_mesozoic_wikipedia": "",
+  "tv_cenozoic_wikipedia": "",
+  "tv_stone": "Pierre",
+  "tv_bronze": "Bronze",
+  "tv_iron": "Fer",
+  "tv_antiquity": "Antiquité",
+  "tv_middle ages": "Moyen-âge",
+  "tv_renaissance": "Renaissance",
+  "tv_enlightenment": "Éclaircissement",
+  "tv_industrial": "Industriel",
+  "tv_contemporary": "Contemporain",
+  "tv_stone_wikipedia": "",
+  "tv_bronze_wikipedia": "",
+  "tv_iron_wikipedia": "",
+  "tv_antiquity_wikipedia": "",
+  "tv_middle ages_wikipedia": "",
+  "tv_renaissance_wikipedia": "",
+  "tv_enlightenment_wikipedia": "",
+  "tv_industrial_wikipedia": "",
+  "tv_contemporary_wikipedia": ""
 }
