--- a/Jsons/language/hi.json
+++ b/Jsons/language/hi.json
@@ -300,5 +300,37 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": ""
+  "tv_2020s_wikipedia": "",
+  "tv_hadean": "हेडियन",
+  "tv_archean": "आर्कियन",
+  "tv_proterozoic": "प्रोटेरोज़ोइक",
+  "tv_phanerozoic": "फैनेरोज़ोइक",
+  "tv_paleozoic": "पैलियोज़ोइक",
+  "tv_mesozoic": "मेसोज़ोइक",
+  "tv_cenozoic": "सेनोज़ोइक",
+  "tv_hadean_wikipedia": "",
+  "tv_archean_wikipedia": "",
+  "tv_proterozoic_wikipedia": "",
+  "tv_phanerozoic_wikipedia": "",
+  "tv_paleozoic_wikipedia": "",
+  "tv_mesozoic_wikipedia": "",
+  "tv_cenozoic_wikipedia": "",
+  "tv_stone": "पत्थर",
+  "tv_bronze": "पीतल",
+  "tv_iron": "लोहा",
+  "tv_antiquity": "प्राचीन काल",
+  "tv_middle ages": "मध्य युग",
+  "tv_renaissance": "पुनर्जागरण",
+  "tv_enlightenment": "प्रबोधन",
+  "tv_industrial": "औद्योगिक",
+  "tv_contemporary": "समकालीन",
+  "tv_stone_wikipedia": "",
+  "tv_bronze_wikipedia": "",
+  "tv_iron_wikipedia": "",
+  "tv_antiquity_wikipedia": "",
+  "tv_middle ages_wikipedia": "",
+  "tv_renaissance_wikipedia": "",
+  "tv_enlightenment_wikipedia": "",
+  "tv_industrial_wikipedia": "",
+  "tv_contemporary_wikipedia": ""
 }
