--- a/Jsons/language/it.json
+++ b/Jsons/language/it.json
@@ -55,7 +55,7 @@
   "timeview3_show": "Mostra/Nascondi la visualizzazione temporale alternativa",
   "timeview1_set": "Modifica la visualizzazione temporale principale",
   "timeview2_set": "Modifica la visualizzazione temporale alternativa",
-  "timeview_save": "Salva la visualizzazione temporale",
+  "timeview_save": "Salva la visualizzazione del tempo",
   "catalogs_show": "Cataloghi",
   "database_show": "Mostra database",
   "load": "Pannelli e scatole di carico",
@@ -300,5 +300,37 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": ""
+  "tv_2020s_wikipedia": "",
+  "tv_hadean": "Adeano",
+  "tv_archean": "Archeano",
+  "tv_proterozoic": "Proterozoico",
+  "tv_phanerozoic": "Fanerozoico",
+  "tv_paleozoic": "Paleozoico",
+  "tv_mesozoic": "Mesozoico",
+  "tv_cenozoic": "Cenozoico",
+  "tv_hadean_wikipedia": "",
+  "tv_archean_wikipedia": "",
+  "tv_proterozoic_wikipedia": "",
+  "tv_phanerozoic_wikipedia": "",
+  "tv_paleozoic_wikipedia": "",
+  "tv_mesozoic_wikipedia": "",
+  "tv_cenozoic_wikipedia": "",
+  "tv_stone": "Calcolo",
+  "tv_bronze": "Bronzo",
+  "tv_iron": "Ferro",
+  "tv_antiquity": "Antichità",
+  "tv_middle ages": "Medioevo",
+  "tv_renaissance": "Rinascimento",
+  "tv_enlightenment": "Illuminismo",
+  "tv_industrial": "Industriale",
+  "tv_contemporary": "Contemporaneo",
+  "tv_stone_wikipedia": "",
+  "tv_bronze_wikipedia": "",
+  "tv_iron_wikipedia": "",
+  "tv_antiquity_wikipedia": "",
+  "tv_middle ages_wikipedia": "",
+  "tv_renaissance_wikipedia": "",
+  "tv_enlightenment_wikipedia": "",
+  "tv_industrial_wikipedia": "",
+  "tv_contemporary_wikipedia": ""
 }
