--- a/Jsons/language/nl.json
+++ b/Jsons/language/nl.json
@@ -300,5 +300,37 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": ""
+  "tv_2020s_wikipedia": "",
+  "tv_hadean": "Hadean",
+  "tv_archean": "Archeïsch",
+  "tv_proterozoic": "Proterozoïcum",
+  "tv_phanerozoic": "Fanerozoïcum",
+  "tv_paleozoic": "Paleozoïcum",
+  "tv_mesozoic": "Mesozoïcum",
+  "tv_cenozoic": "Cenozoïcum",
+  "tv_hadean_wikipedia": "",
+  "tv_archean_wikipedia": "",
+  "tv_proterozoic_wikipedia": "",
+  "tv_phanerozoic_wikipedia": "",
+  "tv_paleozoic_wikipedia": "",
+  "tv_mesozoic_wikipedia": "",
+  "tv_cenozoic_wikipedia": "",
+  "tv_stone": "Steen",
+  "tv_bronze": "Bronzen",
+  "tv_iron": "Ijzer",
+  "tv_antiquity": "Oudheid",
+  "tv_middle ages": "Middeleeuwen",
+  "tv_renaissance": "Renaissance",
+  "tv_enlightenment": "Verlichting",
+  "tv_industrial": "Industrieel",
+  "tv_contemporary": "Modern",
+  "tv_stone_wikipedia": "",
+  "tv_bronze_wikipedia": "",
+  "tv_iron_wikipedia": "",
+  "tv_antiquity_wikipedia": "",
+  "tv_middle ages_wikipedia": "",
+  "tv_renaissance_wikipedia": "",
+  "tv_enlightenment_wikipedia": "",
+  "tv_industrial_wikipedia": "",
+  "tv_contemporary_wikipedia": ""
 }
