--- a/Jsons/language/pl.json
+++ b/Jsons/language/pl.json
@@ -300,5 +300,37 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": ""
+  "tv_2020s_wikipedia": "",
+  "tv_hadean": "Hadean",
+  "tv_archean": "Archeański",
+  "tv_proterozoic": "Proterozoik",
+  "tv_phanerozoic": "Fanerozoik",
+  "tv_paleozoic": "Paleozoik",
+  "tv_mesozoic": "Mezozoik",
+  "tv_cenozoic": "era kenozoiczna",
+  "tv_hadean_wikipedia": "",
+  "tv_archean_wikipedia": "",
+  "tv_proterozoic_wikipedia": "",
+  "tv_phanerozoic_wikipedia": "",
+  "tv_paleozoic_wikipedia": "",
+  "tv_mesozoic_wikipedia": "",
+  "tv_cenozoic_wikipedia": "",
+  "tv_stone": "Kamień",
+  "tv_bronze": "Brązowy",
+  "tv_iron": "Żelazo",
+  "tv_antiquity": "Antyk",
+  "tv_middle ages": "średniowiecze",
+  "tv_renaissance": "Renesans",
+  "tv_enlightenment": "Oświecenie",
+  "tv_industrial": "Przemysłowy",
+  "tv_contemporary": "Współczesny",
+  "tv_stone_wikipedia": "",
+  "tv_bronze_wikipedia": "",
+  "tv_iron_wikipedia": "",
+  "tv_antiquity_wikipedia": "",
+  "tv_middle ages_wikipedia": "",
+  "tv_renaissance_wikipedia": "",
+  "tv_enlightenment_wikipedia": "",
+  "tv_industrial_wikipedia": "",
+  "tv_contemporary_wikipedia": ""
 }
