--- a/Jsons/language/ru.json
+++ b/Jsons/language/ru.json
@@ -126,7 +126,7 @@
   "cal_balinese_explanation": "Календарная система, объединяющая одновременные циклы, включая 210-дневный календарь Павукон. Используется для религиозных церемоний.",
   "cal_hebrew_explanation": "Лунно-солнечный календарь, 12-13 месяцев, начинается с момента сотворения мира (3761 г. до н.э.). Используется для религиозных обрядов.",
   "cal_ethiopian_explanation": "Солнечный календарь, 13 месяцев (12 из 30 дней и 1 из 5-6 дней), отстает от григорианского календаря на 7-8 лет.",
-  "cal_creationist_explanation": "Хронологическая модель вычисляет возраст Земли на основе библейских родословных, определяя время сотворения мира как 6000-10000 лет назад.",
+  "cal_creationist_explanation": "Хронологическая модель вычисляет возраст Земли на основе библейских родословных, определяя период сотворения мира как 6000-10000 лет назад.",
   "cal_gregorian_usage": "Использование: 95% (официально) - Используется в качестве гражданского календаря почти во всех странах для официальных и экономических целей.",
   "cal_islamic_usage": "Использование: 24% (религиозные) - Соблюдается примерно 2 миллиардами мусульман (примерно 24% населения мира), в основном во время религиозных праздников (Рамадан, Хадж и т. д.).",
   "cal_chinese_usage": "Распространенность: 18% (культурная) - Используется примерно 1,4 миллиарда китайцев во время таких праздников, как Китайский Новый год.",
@@ -300,5 +300,37 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": ""
+  "tv_2020s_wikipedia": "",
+  "tv_hadean": "Гадейский",
+  "tv_archean": "Архейский",
+  "tv_proterozoic": "Протерозой",
+  "tv_phanerozoic": "Фанерозой",
+  "tv_paleozoic": "палеозой",
+  "tv_mesozoic": "Мезозой",
+  "tv_cenozoic": "Кайнозой",
+  "tv_hadean_wikipedia": "",
+  "tv_archean_wikipedia": "",
+  "tv_proterozoic_wikipedia": "",
+  "tv_phanerozoic_wikipedia": "",
+  "tv_paleozoic_wikipedia": "",
+  "tv_mesozoic_wikipedia": "",
+  "tv_cenozoic_wikipedia": "",
+  "tv_stone": "Камень",
+  "tv_bronze": "Бронза",
+  "tv_iron": "Железо",
+  "tv_antiquity": "Древность",
+  "tv_middle ages": "Средний возраст",
+  "tv_renaissance": "Ренессанс",
+  "tv_enlightenment": "Просвещение",
+  "tv_industrial": "Промышленный",
+  "tv_contemporary": "Современный",
+  "tv_stone_wikipedia": "",
+  "tv_bronze_wikipedia": "",
+  "tv_iron_wikipedia": "",
+  "tv_antiquity_wikipedia": "",
+  "tv_middle ages_wikipedia": "",
+  "tv_renaissance_wikipedia": "",
+  "tv_enlightenment_wikipedia": "",
+  "tv_industrial_wikipedia": "",
+  "tv_contemporary_wikipedia": ""
 }
