--- a/Jsons/language/uk.json
+++ b/Jsons/language/uk.json
@@ -126,9 +126,9 @@
   "cal_balinese_explanation": "Календарна система, що поєднує одночасні цикли, включаючи 210-денний календар Павукон. Використовується для релігійних церемоній.",
   "cal_hebrew_explanation": "Місячно-сонячний календар, 12-13 місяців, починається з моменту створення світу (3761 р. до н. е.). Використовується для релігійних обрядів.",
   "cal_ethiopian_explanation": "Сонячний календар, 13 місяців (12 з 30 днів та 1 з 5-6 днів), на 7-8 років відстає від григоріанського календаря.",
-  "cal_creationist_explanation": "Хронологічна основа, розраховує вік Землі на основі біблійних генеалогій, розміщуючи створення світу 6000-10 000 років тому.",
+  "cal_creationist_explanation": "Хронологічна основа, розраховує вік Землі на основі біблійних генеалогій, відносячи створення світу до часу 6000-10 000 років тому.",
   "cal_gregorian_usage": "Використання: 95% (офіційне) – Використовується як цивільний календар майже в кожній країні для офіційних та економічних цілей.",
-  "cal_islamic_usage": "Використання: 24% (релігійне) – святкується ~2 мільярдами мусульман (~24% світу), переважно на релігійні свята (Рамадан, Хадж тощо).",
+  "cal_islamic_usage": "Використання: 24% (релігійне) – святкується приблизно 2 мільярдами мусульман (~24% світу), переважно на релігійні свята (Рамадан, Хадж тощо).",
   "cal_chinese_usage": "Використання: 18% (культурне) – святкують ~1,4 мільярда китайців під час таких свят, як Місячний Новий рік.",
   "cal_persian_usage": "Використання: 1,5% (цивільне/культурне) - Офіційний календар в Ірані (~89 млн) та Афганістані (~41 млн).",
   "cal_balinese_usage": "Використання: 1,5% (цивільне) - офіційне в Ефіопії (~126 млн) та використовується в Еритреї.",
@@ -300,5 +300,37 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": ""
+  "tv_2020s_wikipedia": "",
+  "tv_hadean": "Хадеан",
+  "tv_archean": "Архейський",
+  "tv_proterozoic": "Протерозой",
+  "tv_phanerozoic": "Фанерозой",
+  "tv_paleozoic": "Палеозой",
+  "tv_mesozoic": "Мезозой",
+  "tv_cenozoic": "Кайнозой",
+  "tv_hadean_wikipedia": "",
+  "tv_archean_wikipedia": "",
+  "tv_proterozoic_wikipedia": "",
+  "tv_phanerozoic_wikipedia": "",
+  "tv_paleozoic_wikipedia": "",
+  "tv_mesozoic_wikipedia": "",
+  "tv_cenozoic_wikipedia": "",
+  "tv_stone": "Камінь",
+  "tv_bronze": "Бронза",
+  "tv_iron": "Залізо",
+  "tv_antiquity": "Античність",
+  "tv_middle ages": "Середньовіччя",
+  "tv_renaissance": "Відродження",
+  "tv_enlightenment": "Просвітництво",
+  "tv_industrial": "Промисловий",
+  "tv_contemporary": "Сучасний",
+  "tv_stone_wikipedia": "",
+  "tv_bronze_wikipedia": "",
+  "tv_iron_wikipedia": "",
+  "tv_antiquity_wikipedia": "",
+  "tv_middle ages_wikipedia": "",
+  "tv_renaissance_wikipedia": "",
+  "tv_enlightenment_wikipedia": "",
+  "tv_industrial_wikipedia": "",
+  "tv_contemporary_wikipedia": ""
 }
