--- a/Jsons/language/es.json
+++ b/Jsons/language/es.json
@@ -300,5 +300,37 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": ""
+  "tv_2020s_wikipedia": "",
+  "tv_hadean": "Hadeano",
+  "tv_archean": "Arcaico",
+  "tv_proterozoic": "Proterozoico",
+  "tv_phanerozoic": "Fanerozoico",
+  "tv_paleozoic": "Paleozoico",
+  "tv_mesozoic": "mesozoico",
+  "tv_cenozoic": "Cenozoico",
+  "tv_hadean_wikipedia": "",
+  "tv_archean_wikipedia": "",
+  "tv_proterozoic_wikipedia": "",
+  "tv_phanerozoic_wikipedia": "",
+  "tv_paleozoic_wikipedia": "",
+  "tv_mesozoic_wikipedia": "",
+  "tv_cenozoic_wikipedia": "",
+  "tv_stone": "Piedra",
+  "tv_bronze": "Bronce",
+  "tv_iron": "Hierro",
+  "tv_antiquity": "Antigüedad",
+  "tv_middle ages": "Edad media",
+  "tv_renaissance": "Renacimiento",
+  "tv_enlightenment": "Ilustración",
+  "tv_industrial": "Industrial",
+  "tv_contemporary": "Contemporáneo",
+  "tv_stone_wikipedia": "",
+  "tv_bronze_wikipedia": "",
+  "tv_iron_wikipedia": "",
+  "tv_antiquity_wikipedia": "",
+  "tv_middle ages_wikipedia": "",
+  "tv_renaissance_wikipedia": "",
+  "tv_enlightenment_wikipedia": "",
+  "tv_industrial_wikipedia": "",
+  "tv_contemporary_wikipedia": ""
 }
