--- a/Jsons/language/ja.json
+++ b/Jsons/language/ja.json
@@ -108,7 +108,7 @@
   "source_worldhistory": "世界史",
   "cal_name": "カレンダー：",
   "cal_availability_yes": "利用可能",
-  "cal_availability_no": "まだ準備ができていません (支援が必要です... 貢献ウェブサイトはこちら)",
+  "cal_availability_no": "まだ準備ができていません（助けが必要です...貢献ウェブサイトはこちら）",
   "cal_other": "カレンダー",
   "cal_usage": "使用法：",
   "cal_gregorian": "グレゴリオ暦",
@@ -123,16 +123,16 @@
   "cal_islamic_explanation": "太陰暦（12 か月、354 ～ 355 日）は、ムハンマドのメディナへの移住（西暦 622 年）から始まります。",
   "cal_chinese_explanation": "太陰太陽暦は、太陰月、太陽年、そして12年周期の干支を組み合わせた暦です。東アジアの伝統的な祭りに用いられます。",
   "cal_persian_explanation": "太陽暦は 365 ～ 366 日で、春分 (ノウルーズ) から始まります。",
-  "cal_balinese_explanation": "210日間のパウコン暦を含む、複数の周期を組み合わせた暦体系。宗教儀式に用いられる。",
+  "cal_balinese_explanation": "210日間のパウコン暦を含む、同時周期を組み合わせた暦体系。宗教儀式に用いられる。",
   "cal_hebrew_explanation": "太陰太陽暦（12～13か月）は天地創造（紀元前3761年）から始まります。宗教行事に用いられます。",
   "cal_ethiopian_explanation": "太陽暦、13 か月 (30 日が 12 か月、5 ～ 6 日が 1 か月)、グレゴリオ暦より 7 ～ 8 年遅れています。",
   "cal_creationist_explanation": "年代順の枠組みで、聖書の系図から地球の年齢を計算し、創造を 6,000 ～ 10,000 年前に位置付けます。",
   "cal_gregorian_usage": "使用率: 95% (公式) - ほぼすべての国で公式および経済目的で民間暦として使用されています。",
-  "cal_islamic_usage": "使用率: 24% (宗教的) - 約 20 億人のイスラム教徒 (世界の約 24%) が主に宗教上の祝日 (ラマダン、ハッジなど) に実施します。",
+  "cal_islamic_usage": "使用率: 24% (宗教的) - 約 20 億人のイスラム教徒 (世界の約 24%) が主に宗教上の祝日 (ラマダン、ハッジなど) に遵守します。",
   "cal_chinese_usage": "使用率: 18% (文化的) - 旧正月などの祭りで約 14 億人の中国人がこれを祝います。",
   "cal_persian_usage": "使用率: 1.5% (民間/文化) - イラン (~8,900 万) とアフガニスタン (~4,100 万) の公式カレンダー。",
   "cal_balinese_usage": "使用率: 1.5% (民間) - エチオピア(~126M)で公用語、エリトリアで使用。",
-  "cal_hebrew_usage": "使用率: 0.2% (宗教的) - ユダヤ人コミュニティ (約 1,600 万人) が宗教的な目的で使用しています。",
+  "cal_hebrew_usage": "使用状況: 0.2% (宗教的) - ユダヤ人コミュニティ (約 1,600 万人) が宗教的な目的で使用しています。",
   "cal_ethiopian_usage": "使用率: <0.1% (文化的) - 主にバリ島 (インドネシア) で使用されており、約 450 万人が使用しています。",
   "cal_creationist_usage": "使用率: <0.01% (ニッチ) - いくつかの原理主義キリスト教コミュニティで使用されています。",
   "tv_universe": "宇宙",
@@ -300,5 +300,37 @@
   "tv_1990s_wikipedia": "",
   "tv_2000s_wikipedia": "",
   "tv_2010s_wikipedia": "",
-  "tv_2020s_wikipedia": ""
+  "tv_2020s_wikipedia": "",
+  "tv_hadean": "冥王",
+  "tv_archean": "始生代",
+  "tv_proterozoic": "原生代",
+  "tv_phanerozoic": "顕生代",
+  "tv_paleozoic": "古生代",
+  "tv_mesozoic": "中生代",
+  "tv_cenozoic": "新生代",
+  "tv_hadean_wikipedia": "",
+  "tv_archean_wikipedia": "",
+  "tv_proterozoic_wikipedia": "",
+  "tv_phanerozoic_wikipedia": "",
+  "tv_paleozoic_wikipedia": "",
+  "tv_mesozoic_wikipedia": "",
+  "tv_cenozoic_wikipedia": "",
+  "tv_stone": "石",
+  "tv_bronze": "ブロンズ",
+  "tv_iron": "鉄",
+  "tv_antiquity": "古代",
+  "tv_middle ages": "中世",
+  "tv_renaissance": "ルネッサンス",
+  "tv_enlightenment": "啓発",
+  "tv_industrial": "産業",
+  "tv_contemporary": "コンテンポラリー",
+  "tv_stone_wikipedia": "",
+  "tv_bronze_wikipedia": "",
+  "tv_iron_wikipedia": "",
+  "tv_antiquity_wikipedia": "",
+  "tv_middle ages_wikipedia": "",
+  "tv_renaissance_wikipedia": "",
+  "tv_enlightenment_wikipedia": "",
+  "tv_industrial_wikipedia": "",
+  "tv_contemporary_wikipedia": ""
 }
